# pickleprobe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPARISON.md  DESIGN.md  SECURITY_POLICY.md  demo-output.txt
scripts/: benchmark_corpus.py  benchmark_pickleball_subset.py  compare_picklescan.py  download_corpus.sh  download_corpus_monitored.sh  fetch_corpus.sh  fetch_curated_corpus.sh  generate_corpus_vectors.py  verify_corpus.sh
src/pickleprobe/: __init__.py  __main__.py  cli.py
src/pickleprobe/analysis/: __init__.py  analyzer.py  batch.py  cfg_taint.py  gadget_resolver.py
src/pickleprobe/domain/: __init__.py  cfg.py  memo.py  policy.py  security.py  symbolic.py  taint.py  values.py
src/pickleprobe/formats/: __init__.py  containers.py  loader.py  types.py
src/pickleprobe/policy/: default.yaml
src/pickleprobe/pvm/: __init__.py  emulator.py
src/pickleprobe/reporting/: __init__.py  sarif.py
src/polyglot/: __init__.py  __main__.py  cli.py
src/polyglot/analysis/: __init__.py  analyzer.py  cfg_taint.py
src/polyglot/domain/: __init__.py  cfg.py  memo.py  policy.py  security.py  values.py
tests/: test_batch_scan.py  test_build_newobj.py  test_cfg_taint.py  test_cli_scan.py  test_containers.py  test_corpus_manifest.py  test_formats.py  test_gadget_chains.py  test_gadget_resolver.py  test_global_analysis.py  test_memo_taint_graph.py  test_memo_warnings.py  test_opcode_coverage.py  test_pvm_emulator.py  test_reduce_analysis.py  test_security_policy.py
tests/corpus/: README.md  manifest.yaml  pickleball_subset.yaml
(+21 files in other folders)
